ScheduleBatch/src/objects/Book__c.object
<CustomObject>
    <fields>
        <fullName>Author__c</fullName>
        <label>Author</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Published__c</fullName>
        <label>Date Published</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Genre__c</fullName>
        <label>Genre</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fantasy</fullName>
                </value>
                <value>
                    <fullName>Drama</fullName>
                </value>
                <value>
                    <fullName>Novel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ISBN__c</fullName>
        <label>ISBN</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Publishing_House__c</fullName>
        <label>Publishing House</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>School Books</fullName>
                </value>
                <value>
                    <fullName>Penguin Books UK</fullName>
                </value>
                <value>
                    <fullName>Alyson Books</fullName>
                </value>
                <value>
                    <fullName>Atlas Press</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Book</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Book Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Books</pluralLabel>
    <recordTypes>
        <fullName>Fiction</fullName>
        <active>true</active>
        <label>Fiction</label>
    </recordTypes>
    <recordTypes>
        <fullName>Schoolbook</fullName>
        <active>true</active>
        <label>Schoolbook</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Rule</fullName>
        <active>true</active>
        <description>Validates that the value of a custom date field is a weekday (not Saturday or Sunday).</description>
        <errorConditionFormula>CASE(MOD( Date_Published__c-DATE(1900, 1, 7), 7),
0,0,
6,0,
1)=0</errorConditionFormula>
        <errorMessage>It&apos;s Saturday or Sunday</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rule_2</fullName>
        <active>true</active>
        <description>Ensures that only the record owner can make changes to a custom field called Personal Goal</description>
        <errorConditionFormula>AND(
 ISCHANGED(Date_Published__c),
 OwnerId&lt;&gt;$User.Id
)</errorConditionFormula>
        <errorMessage>Sorry, but you not owner</errorMessage>
    </validationRules>
</CustomObject>